--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Your Name</h1>
+    <h1>Hansika Kondamudi</h1>
     <nav>
       <ul>
         <li><a href="#about">About</a></li>
@@ -20,21 +20,24 @@
   
   <section id="about">
     <h2>About Me</h2>
-    <p>Write a short introduction here.</p>
+   <p>I am a student passionate about web development and technology.</p>
   </section>
   
   <section id="projects">
     <h2>Projects</h2>
-    <p>Details of your projects will go here.</p>
+   <ul>
+  <li>Project 1 – Portfolio Website</li>
+  <li>Project 2 – JavaScript Game</li>
+</ul>
   </section>
   
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: youremail@example.com</p>
+    <p>Email: hansika@example.com</p>
   </section>
   
   <footer>
-    <p>&copy; 2025 Your Name</p>
+   <p>&copy; 2025 Hansika Kondamudi</p>
   </footer>
 </body>
 </html>
